--- a/Resources/KanjiFonts.qrc
+++ b/Resources/KanjiFonts.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>KanjiFonts/NotoSansJP-Regular.otf</file>
         <file>KanjiFonts/NotoSerifJP-Regular.otf</file>
+        <file>KanjiFonts/PJ_Hiragana.ttf</file>
     </qresource>
 </RCC>
