--- a/Src/appsettings.ui
+++ b/Src/appsettings.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>436</width>
-    <height>474</height>
+    <height>511</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -654,7 +654,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Global Statistics :</string>
+        <string>Global Statistics and Informations :</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -721,6 +721,26 @@
          </property>
          <property name="text">
           <string>Reset Stats</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="resetPopup">
+         <property name="text">
+          <string>Reset Help Popup</string>
          </property>
         </widget>
        </item>
