--- a/Src/appsettings.ui
+++ b/Src/appsettings.ui
@@ -30,7 +30,7 @@
     <number>9</number>
    </property>
    <item>
-    <layout class="QVBoxLayout" name="QcmSettings">
+    <layout class="QVBoxLayout" name="QcmSettings" stretch="1,1,1,1,1">
      <property name="topMargin">
       <number>0</number>
      </property>
@@ -281,7 +281,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="VocabSettings">
+    <layout class="QVBoxLayout" name="VocabSettings" stretch="1,1,1">
      <property name="topMargin">
       <number>0</number>
      </property>
@@ -374,6 +374,12 @@
        </item>
        <item>
         <widget class="QComboBox" name="VocabFntSizeCombox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="currentIndex">
           <number>4</number>
          </property>
@@ -436,7 +442,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="GlobalSettings">
+    <layout class="QVBoxLayout" name="GlobalSettings" stretch="1,1,1,1,1">
      <property name="topMargin">
       <number>0</number>
      </property>
@@ -613,7 +619,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="StatsSettings">
+    <layout class="QVBoxLayout" name="StatsSettings" stretch="1,1,1">
      <property name="topMargin">
       <number>0</number>
      </property>
