--- a/Src/fntsetting.ui
+++ b/Src/fntsetting.ui
@@ -18,7 +18,7 @@
     <number>9</number>
    </property>
    <item>
-    <layout class="QVBoxLayout" name="OverallContainer">
+    <layout class="QVBoxLayout" name="OverallContainer" stretch="1,1">
      <property name="topMargin">
       <number>0</number>
      </property>
@@ -61,6 +61,12 @@
        </item>
        <item>
         <widget class="QSlider" name="BoostStemSlider">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="maximum">
           <number>20</number>
          </property>
@@ -81,7 +87,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="HiraganaContainer">
+    <layout class="QVBoxLayout" name="HiraganaContainer" stretch="1,1,1">
      <property name="topMargin">
       <number>0</number>
      </property>
@@ -174,7 +180,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="KatakanaContainer">
+    <layout class="QVBoxLayout" name="KatakanaContainer" stretch="1,1,1">
      <property name="topMargin">
       <number>0</number>
      </property>
@@ -238,6 +244,12 @@
        </item>
        <item>
         <widget class="QSlider" name="KatakanaSizeSlider">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="minimum">
           <number>20</number>
          </property>
@@ -264,7 +276,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="KanjiContainer">
+    <layout class="QVBoxLayout" name="KanjiContainer" stretch="1,1">
      <property name="topMargin">
       <number>0</number>
      </property>
@@ -310,7 +322,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="RomanjiContainer">
+    <layout class="QVBoxLayout" name="RomanjiContainer" stretch="1,1,1">
      <property name="topMargin">
       <number>0</number>
      </property>
