--- a/Src/fntsetting.ui
+++ b/Src/fntsetting.ui
@@ -308,7 +308,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="KanjiFntDropdown"/>
+        <widget class="QComboBox" name="KanjiFntDropdown">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
