--- a/Src/vocabularydisplay.ui
+++ b/Src/vocabularydisplay.ui
@@ -96,7 +96,10 @@
      <property name="sizeConstraint">
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
-     <property name="spacing">
+     <property name="horizontalSpacing">
+      <number>0</number>
+     </property>
+     <property name="verticalSpacing">
       <number>6</number>
      </property>
     </layout>
