AggressiveClearScreen now happening after Scrollbar show events for EditKana and VocabList pages

--- a/Src/symbolsetting.ui
+++ b/Src/symbolsetting.ui
@@ -52,6 +52,9 @@
      <property name="lineWidth">
       <number>0</number>
      </property>
+     <property name="verticalScrollBarPolicy">
+      <enum>Qt::ScrollBarAsNeeded</enum>
+     </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
