--- a/Src/vocabularydisplay.ui
+++ b/Src/vocabularydisplay.ui
@@ -102,6 +102,9 @@
      <property name="verticalSpacing">
       <number>6</number>
      </property>
+     <item row="0" column="0">
+      <widget class="QPlainTextEdit" name="plainTextEdit"/>
+     </item>
     </layout>
    </item>
    <item>
