working on getting sleep stuff working, adding more sheet, spotted a bug and added it to the todo list

--- a/Src/appsettings.ui
+++ b/Src/appsettings.ui
@@ -587,7 +587,7 @@
        <item>
         <widget class="QLabel" name="WifiLabel">
          <property name="text">
-          <string>Turn off wifi at startup :</string>
+          <string>Wifi Status :</string>
          </property>
         </widget>
        </item>
