--- a/Src/qcmentryguess.ui
+++ b/Src/qcmentryguess.ui
@@ -37,7 +37,7 @@
      <item>
       <widget class="QPushButton" name="EntryGuess">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
