--- a/Src/qcmexercice.ui
+++ b/Src/qcmexercice.ui
@@ -204,9 +204,12 @@
     </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
+    <layout class="QVBoxLayout" name="PlayLayout" stretch="1,9">
      <property name="spacing">
-      <number>0</number>
+      <number>6</number>
+     </property>
+     <property name="sizeConstraint">
+      <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <property name="topMargin">
       <number>0</number>
@@ -214,7 +217,7 @@
      <item>
       <widget class="QLabel" name="GuessMe">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -236,7 +239,7 @@
      <item>
       <layout class="QGridLayout" name="EntriesGridLayout" rowstretch="0" columnstretch="0">
        <property name="sizeConstraint">
-        <enum>QLayout::SetDefaultConstraint</enum>
+        <enum>QLayout::SetMaximumSize</enum>
        </property>
        <property name="leftMargin">
         <number>0</number>
